--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,5 +5,12 @@
 }
 
 <div class="text-center">
-    <p id="screen-log"></p>
+    <p class="screen-log" id="screen-log-mouse"><br>Screen X/Y: 0, 0<br>Client X/Y: 0, 0<br>Last interval: 0</p>
+    <p class="screen-log" id="screen-log-keyboard"><br>Last duration: 0</p>
+    <p class="screen-log" id="screen-log-gamepad"><br>null<br>Last interval: 0</p>
 </div>
+<div id="chart-mouse" style="width: 100%; height: 400px;"></div>
+<div id="chart-keyboard" style="width: 100%; height: 400px;"></div>
+
+<script src="~/js/chart.js"></script>
+<script src="~/js/index.js"></script>
