--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -9,8 +9,8 @@
     <p class="screen-log" id="screen-log-keyboard"><br>Last duration: 0</p>
     <p class="screen-log" id="screen-log-gamepad"><br>null<br>Last interval: 0</p>
 </div>
-<div id="chart-mouse" style="width: 100%; height: 400px;"></div>
-<div id="chart-keyboard" style="width: 100%; height: 400px;"></div>
+<canvas id="chart-mouse" width="802" height="200"></canvas>
+<canvas id="chart-keyboard" width="802" height="200"></canvas>
+<canvas id="chart-gamepad" width="802" height="200"></canvas>
 
-<script src="~/js/chart.js"></script>
 <script src="~/js/index.js"></script>
