--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home page";
 }
 
-<div>
+<div class="screen-log-area">
     <p class="screen-log" id="screen-log-mouse"><br>Screen X/Y: 0, 0<br>Client X/Y: 0, 0<br>Last interval: 0</p>
     <p class="screen-log" id="screen-log-keyboard"><br>Last duration: 0</p>
     <p class="screen-log" id="screen-log-gamepad"><br>null<br>Last interval: 0</p>
