--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -11,6 +11,11 @@
     <div id="sider">
         <nav class="nav-main">
             <div class="nav-main-side"></div>
+            <div class="nav-main-items">
+                <a class="nav-main-item">Mouse</a>
+                <a class="nav-main-item">Keyboard</a>
+                <a class="nav-main-item">Gamepad</a>
+            </div>
         </nav>
     </div>
     <div class="container">
