--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,6 @@
 <body>
     <div id="sider">
         <nav class="nav-main">
-            <div class="nav-main-side"></div>
             <div class="nav-main-items">
                 <a class="nav-main-item">Mouse</a>
                 <a class="nav-main-item">Keyboard</a>
@@ -24,6 +23,8 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="~/js/index.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
