--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -16,14 +16,14 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: rgb(240, 240, 240);
+  background-color: hsl(0, 0%, 15%);
 }
 
 .nav-main-items {
   font-family: Geneva, Tahoma, sans-serif;
   font-size: 1.2rem;
   font-weight: 100;
-  color: rgb(60, 60, 60);
+  color: hsl(0, 0%, 50%);
   position: relative;
   top: 60%;
   margin-left: 4rem;
@@ -35,26 +35,27 @@ body {
   position: relative;
   margin-top: -1px;
   padding: 1rem 2.5rem;
-  border-top: 1px solid gray;
-  border-bottom: 1px solid gray;
+  border-top: 1px solid hsl(0, 0%, 25%);
+  border-bottom: 1px solid hsl(0, 0%, 25%);
 }
 
 .container {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: rgb(80, 80, 80);
+  color: hsl(0, 0%, 30%);
   position: relative;
   left: 18%;
   padding: 3rem;
   width: 100%;
   min-height: 100vh;
-  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: hsl(0, 0%, 90%);
+  border-left: medium solid hsl(0, 0%, 50%);
 }
 
 .screen-log-area {
   margin-bottom: 1rem;
   padding: 0rem 1rem;
   width: 30%;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: hsl(0, 0%, 85%);
   border-radius: 0.5rem;
 }
 
