--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -79,5 +79,9 @@ canvas {
 }
 
 #button-gamepad {
-  color: black;
+  animation: 1ms ease 0s infinite zero_time_animation;
+}
+@keyframes zero_time_animation {
+  0% { color: hsl(0, 0%, 0%); }
+  100% { color: hsl(0, 0%, 0%); }
 }
