--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - RazorPagesApp</title>
+    <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/style.css" />
 </head>
@@ -11,9 +11,10 @@
     <div id="sider">
         <nav class="nav-main">
             <div class="nav-main-items">
-                <a class="nav-main-item">Mouse</a>
-                <a class="nav-main-item">Keyboard</a>
-                <a class="nav-main-item">Gamepad</a>
+                <a class="nav-main-item" href="~/mouse">Mouse</a>
+                <a class="nav-main-item" href="~/keyboard">Keyboard</a>
+                <a class="nav-main-item" href="~/gamepad_a">Gamepad (A)</a>
+                <a class="nav-main-item" href="~/gamepad_b">Gamepad (B)</a>
             </div>
         </nav>
     </div>
