--- a/Pages/gamepad_a.cshtml
+++ b/Pages/gamepad_a.cshtml
@@ -5,10 +5,10 @@
 }
 
 <div class="screen-log-area">
-  <p class="screen-log" id="screen-log-gamepad_a"><br>null<br>Last interval: 0</p>
+  <p class="screen-log" id="screen-log-gp_a"><br>null<br>Last interval: 0</p>
 </div>
-<button id="button-gamepad">Start</button>
-<canvas id="chart-gamepad" width="802" height="200"></canvas>
+<button id="button-gp_a">Start</button>
+<canvas id="chart-gp_a" width="802" height="200"></canvas>
 
 @section Scripts
 {
