--- a/Pages/keyboard.cshtml
+++ b/Pages/keyboard.cshtml
@@ -5,10 +5,10 @@
 }
 
 <div class="screen-log-area">
-  <p class="screen-log" id="screen-log-keyboard"><br>Last duration: 0</p>
+  <p class="screen-log" id="screen-log-kb"><br>Last duration: 0</p>
 </div>
-<button id="button-keyboard">Start</button>
-<canvas id="chart-keyboard" width="802" height="200"></canvas>
+<button id="button-kb">Start</button>
+<canvas id="chart-kb" width="802" height="200"></canvas>
 
 @section Scripts
 {
