--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -83,7 +83,10 @@ canvas {
   margin-bottom: 1rem;
 }
 
-#button-gamepad {
+#button-gp_a {
+  animation: 1ms ease 0s infinite zero_time_animation;
+}
+#button-gp_b {
   animation: 1ms ease 0s infinite zero_time_animation;
 }
 @keyframes zero_time_animation {
