--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -13,8 +13,7 @@
             <div class="nav-main-items">
                 <a class="nav-main-item" href="~/mouse">Mouse</a>
                 <a class="nav-main-item" href="~/keyboard">Keyboard</a>
-                <a class="nav-main-item" href="~/gamepad_a">Gamepad (A)</a>
-                <a class="nav-main-item" href="~/gamepad_b">Gamepad (B)</a>
+                <a class="nav-main-item" href="~/gamepad">Gamepad</a>
             </div>
         </nav>
     </div>
