--- a/Pages/gamepad.cshtml
+++ b/Pages/gamepad.cshtml
@@ -5,12 +5,12 @@
 }
 
 <div class="screen-log-area">
-  <p class="screen-log" id="screen-log-gp_a"><br>null<br>Last interval: 0</p>
+  <p class="screen-log" id="screen-log-gp"><br>null<br>Last interval: 0</p>
 </div>
-<button id="button-gp_a">Start</button>
-<canvas id="chart-gp_a" width="802" height="200"></canvas>
+<button id="button-gp">Start</button>
+<canvas id="chart-gp" width="802" height="200"></canvas>
 
 @section Scripts
 {
-  <script src="~/js/gamepad_a.js"></script>
+  <script src="~/js/gamepad.js"></script>
 }
