--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -74,11 +74,13 @@ body {
 
 button {
   font-family: Tahoma, sans-serif;
+  font-size: 0.95rem;
+  letter-spacing: 0.05rem;
   color: hsl(0, 0%, 30%);
-  width: 5rem;
-  height: 2rem;
+  width: 5.25rem;
+  height: 2.25rem;
   border: 0.125rem hsl(0, 0%, 80%) solid;
-  border-radius: 0.25rem;
+  border-radius: 0.375rem;
 }
 
 button.active {
