--- a/Pages/keyboard.cshtml
+++ b/Pages/keyboard.cshtml
@@ -9,6 +9,12 @@
 </div>
 <button id="button-kb">Start</button>
 <canvas id="chart-kb" width="802" height="200"></canvas>
+<ul class="notes" list-title="Notes:">
+  <li class="note">This tester has not been tested on various devices.</li>
+  <li class="note">To test your keyboard polling rate, press and release keys simultaneously.</li>
+  <li class="note">Recommend using an AA battery to press and release keys simultaneously.</li>
+  <li class="note">Record one less key release event every time, the first one is ignored.</li>
+</ul>
 
 @section Scripts
 {
