--- a/Pages/gamepad.cshtml
+++ b/Pages/gamepad.cshtml
@@ -9,6 +9,9 @@
 </div>
 <button id="button-gp">Start</button>
 <canvas id="chart-gp" width="802" height="200"></canvas>
+<ul class="notes" list-title="Notes:">
+  <li class="note">Need unlock broswer frame rate limit first(don't do it), still has problems.</li>
+</ul>
 
 @section Scripts
 {
