--- a/Pages/mouse.cshtml
+++ b/Pages/mouse.cshtml
@@ -9,6 +9,9 @@
 </div>
 <button id="button-mouse">Start</button>
 <canvas id="chart-mouse" width="802" height="200"></canvas>
+<ul class="notes" list-title="Notes:">
+  <li class="note">Move your mouse in circles then repeat.</li>
+</ul>
 
 @section Scripts
 {
