--- a/Pages/gamepad.cshtml
+++ b/Pages/gamepad.cshtml
@@ -10,7 +10,7 @@
 <button id="button-gp">Start</button>
 <canvas id="chart-gp" width="802" height="200"></canvas>
 <ul class="notes" list-title="Notes:">
-  <li class="note">Need unlock broswer frame rate limit first(don't do it), still has problems.</li>
+  <li class="note">Need unlock browser frame rate limit first (don't do it), still has problems.</li>
 </ul>
 
 @section Scripts
