--- a/Pages/gamepad.cshtml
+++ b/Pages/gamepad.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-  ViewData["Title"] = "Latency Tester - Gamepad (A)";
+  ViewData["Title"] = "Polling Rate Test - Gamepad";
 }
 
 <div class="screen-log-area">
