--- a/Pages/keyboard.cshtml
+++ b/Pages/keyboard.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-  ViewData["Title"] = "Latency Tester - Keyboard";
+  ViewData["Title"] = "Polling Rate Test - Keyboard";
 }
 
 <div class="screen-log-area">
