--- a/Pages/mouse.cshtml
+++ b/Pages/mouse.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-  ViewData["Title"] = "Latency Tester - Mouse";
+  ViewData["Title"] = "Polling Rate Test - Mouse";
 }
 
 <div class="screen-log-area">
