--- a/Pages/keyboard.cshtml
+++ b/Pages/keyboard.cshtml
@@ -1,5 +1,9 @@
 ﻿@page
 @model IndexModel
+@section metatags {
+  <meta name="description" content="Polling rate test for keyboards.">
+  <meta name="keywords" content="polling rate, latency, keyboard, online">
+}
 @{
   ViewData["Title"] = "Polling Rate Test - Keyboard";
 }
